--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^7.12.1",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^17.0.0 || ^18.0.0",
